--- a/index.html
+++ b/index.html
@@ -95,9 +95,7 @@
                         <div class="h1 mb-3">
                             <i class="bi bi-people"></i>
                         </div>
-                        <h3 class="card-title mb-3">
-                            Hybrid
-                        </h3>
+                        <h3 class="card-title mb-3">Hybrid</h3>
                         <p class="card-text"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed itaque atque repellat consectetur aperiam non?
                         </p>
                         <a href="#" class="btn btn-dark">Read More</a>
